# pem_core

./: README.md  pyproject.toml
src/pem_core/: __init__.py  constants.py  data.py  sampling.py  types.py  typing.py
src/pem_core/workflows/: mcmc.py
tests/: test_data.py
