[project]
name = "pem-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Marks", email = "marksta@umich.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "amisc",
    "numpy",
    "pandas",
    "pint",
    "xarray",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
amisc = { git = "https://github.com/eckelsjd/amisc" }
